--- a/config.yaml
+++ b/config.yaml
@@ -8,6 +8,7 @@ tags: ["海洋", "homepage", "portfolio"]
 disableKinds: ["taxonomy"]
 enableEmoji: true
 pygmentsUseClasses: true
+ignoreErrors: ["error-disable-taxonomy"]
 
 module:
   imports:
