--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 title: "智慧海洋实验室"
-baseURL: "https://raiots.github.io/solweb/"
+baseURL: "https://solorg.netlify.app"
 languageCode: "en-US"
 theme: "github.com/kdevo/osprey-delight/v5"
 tags: ["海洋", "homepage", "portfolio"]
